-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 11.0.0
-
None
-
-
2f80ef7f2 (11.0)
-
QDS Berlin - 2023 Week 37/38
Tried adding my RaspberryPi4 in Devices and ended up getting 30+ "qtc-askpass" dialogs and DS in "not respoding" state. Steps:
- Had Raspi set up and connected to wlan
- Opened DS and a project
- Opened Preferences -> Devices
- Clicked arrow in Add -button
- Selected "Add Boot2qt Device"
- Typed IP in Host name
- Clicked "Apply"
- Clicked "Test" button
- qtc-askpass dialog opened. (Not sure what this is, what password do I need to give? )
- Clicked Cancel
- qtc-askpass dialog opened again, and again if I tried to cancel
- > No way to cancel, DS came soon unresponsive and needed to force quit it. At this point I had 30+ qtc askpass dialogs open
This issue does not reproduce when I add the device by Preferences -> Devices -> Add -> Start Wizard to add device. This way I can add it without getting qtc - askpass dialog and testing the connection works.
- is duplicated by
-
QTCREATORBUG-29802 Omitting "root" as the user name leads to blocked testing screen
-
- Closed
-