qtc-askpass: Quit after retrieving the password

Task-number: QTCREATORBUG-29619
Change-Id: Ib279ec43b7f67b8eac593d9e2f9800a65db024b7
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>